--- a/firstApp/pom.xml
+++ b/firstApp/pom.xml
@@ -8,33 +8,41 @@
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>firstApp</name>
-	
+
 	<prerequisites>
 		<maven>3</maven>
 	</prerequisites>
 
 	<properties>
+		<!-- Versions of the dependencies. -->
 		<vaadin.version>7.7.0</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+		<signme.api.version>4.9.10-4510</signme.api.version>
+		<commons.configuration.version>2.1</commons.configuration.version>
+		<junit.version>4.12</junit.version>
+
+		<!-- Version of the plugins. -->
 		<jetty.plugin.version>9.3.9.v20160517</jetty.plugin.version>
+		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
+
+		<!-- Project properties. -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<signme.api.version>4.9.10-4510</signme.api.version>
-		<!-- If there are no local customisations, this can also be "fetch" or "cdn" -->
+
+		<!-- If there are no local customisations, this can also be "fetch" or 
+			"cdn" -->
 		<vaadin.widgetset.mode>local</vaadin.widgetset.mode>
 	</properties>
-	
-	
+
 	<repositories>
 		<repository>
 			<id>bundesdruckerei_release</id>
 			<url>http://fdhmaven01:8081/nexus/content/repositories/bundesdruckerei_release</url>
 		</repository>
-    	<repository>
+		<repository>
 			<id>bundesdruckerei_snapshot</id>
 			<url>http://fdhmaven01:8081/nexus/content/repositories/bundesdruckerei_snapshot</url>
-  		</repository>
+		</repository>
 		<repository>
 			<id>vaadin-addons</id>
 			<url>http://maven.vaadin.com/vaadin-addons</url>
@@ -73,17 +81,17 @@
 			<groupId>de.bdr.signme</groupId>
 			<artifactId>signme-api-java</artifactId>
 			<version>${signme.api.version}</version>
- 		</dependency>
-		<dependency>
-   			<groupId>javax.validation</groupId>
-   			<artifactId>validation-api</artifactId>
-    		<version>1.0.0.GA</version>
 		</dependency>
 		<dependency>
-      		<groupId>org.hibernate</groupId>
-       		<artifactId>hibernate-validator</artifactId>
-       		<version>4.3.0.Final</version>
-     	 </dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.3.0.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-server</artifactId>
@@ -99,6 +107,32 @@
 		<dependency>
 			<groupId>com.vaadin</groupId>
 			<artifactId>vaadin-themes</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>${commons.configuration.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-testbench</artifactId>
+			<version>4.1.0.beta2</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
